Elaboração da parte textual

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -7,121 +7,177 @@
 
 %---------LEGISLAÇAO---------%
 @Manual{nbr14724,
-title = {ABNT NBR 14724},
-subtitle={Informação
-e documentação: trabalhos acadêmicos: apresentação},
-author = {{ABNT}},
-address = {Rio de Janeiro},
-year = {2011},
+    title       = {ABNT NBR 14724},
+    subtitle    ={Informação
+    e documentação: trabalhos acadêmicos: apresentação},
+    author      = {{ABNT}},
+    address     = {Rio de Janeiro},
+    year        = {2011},
 }
 
 @Manual{nbr6023,
-title = {ABNT NBR 6023},
-subtitle={Informação
-e documentação: referências: elaboração},
-author = {{ABNT}},
-address = {Rio de Janeiro},
-year = {2018},
-edition = {2}
+    title       = {ABNT NBR 6023},
+    subtitle    = {Informação e documentação: referências: elaboração},
+    author      = {{ABNT}},
+    address     = {Rio de Janeiro},
+    year        = {2018},
+    edition     = {2}
 }
 
 @Manual{nbr6024,
-title = {ABNT NBR 6024},
-subtitle={Informação
-e documentação: Numeração progressiva das seções de um documento: apresentação},
-author = {{ABNT}},
-address = {Rio de Janeiro},
-year = {2012},
-edition = {2}
+    title       = {ABNT NBR 6024},
+    subtitle    = {Informação e documentação: Numeração progressiva das seções de um documento: apresentação},
+    author      = {{ABNT}},
+    address     = {Rio de Janeiro},
+    year        = {2012},
+    edition     = {2}
 }
 
 @Manual{nbr6027,
-title = {ABNT NBR 6027},
-subtitle={Informação
-e documentação: sumário: apresentação},
-author = {{ABNT}},
-address = {Rio de Janeiro},
-year = {2012},
-edition = {2}
+    title       = {ABNT NBR 6027},
+    subtitle    = {Informação e documentação: sumário: apresentação},
+    author      = {{ABNT}},
+    address     = {Rio de Janeiro},
+    year        = {2012},
+    edition     = {2}
 }
 
 @Manual{nbr6028,
-title = {ABNT NBR 6028},
-subtitle={Informação
-e documentação: resumo, resenha e recensão: apresentação},
-author = {{ABNT}},
-address = {Rio de Janeiro},
-year = {2021},
+    title = {ABNT NBR 6028},
+    subtitle={Informação
+    e documentação: resumo, resenha e recensão: apresentação},
+    author = {{ABNT}},
+    address = {Rio de Janeiro},
+    year = {2021},
 }
 
 @Manual{nbr6034,
-title = {ABNT NBR 6034},
-subtitle={Informação
-e documentação: índice: apresentação},
-author = {{ABNT}},
-address = {Rio de Janeiro},
-year = {2011},
+    title       = {ABNT NBR 6034},
+    subtitle    = {Informação e documentação: índice: apresentação},
+    author      = {{ABNT}},
+    address     = {Rio de Janeiro},
+    year        = {2011},
 }
 
 @Manual{nbr10520,
-title = {ABNT NBR 10520},
-subtitle={Informação
-e documentação: citações em documentos: apresentação},
-author = {{ABNT}},
-address = {Rio de Janeiro},
-year = {2023},
-edition = {2}
+    title       = {ABNT NBR 10520},
+    subtitle    = {Informação e documentação: citações em documentos: apresentação},
+    author      = {{ABNT}},
+    address     = {Rio de Janeiro},
+    year        = {2023},
+    edition = {2}
 }
 
 @Manual{ManualIBGE,
-title = {Normas de apresentação tabular },
-author = {IBGE},
-address = {Rio de Janeiro},
-year = {1993},
-url={https://biblioteca.ibge.gov.br/visualizacao/livros/liv23907.pdf},
-urlaccessdate={05 jul. 2024},
+    title = {Normas de apresentação tabular },
+    author = {IBGE},
+    address = {Rio de Janeiro},
+    year = {1993},
+    url={https://biblioteca.ibge.gov.br/visualizacao/livros/liv23907.pdf},
+    urlaccessdate={05 jul. 2024},
 }
 
 @Manual{ManualUFT,
-title = {Manual de normalização para elaboração de trabalhos acadêmico-científicos da Universidade Federal do Tocantins},
-author = {UFT},
-address = {Palmas},
-year = {2022},
-url={https://docs.uft.edu.br/share/s/ktGoAcoYQg2ihXLE_BzOWQ},
-urlaccessdate={05 jul. 2024},
-edition = 21
+    title           = {Manual de normalização para elaboração de trabalhos acadêmico-científicos da Universidade Federal do Tocantins},
+    author          = {UFT},
+    address         = {Palmas},
+    year            = {2022},
+    url             ={https://docs.uft.edu.br/share/s/ktGoAcoYQg2ihXLE_BzOWQ},
+    urlaccessdate   ={05 jul. 2024},
+    edition         = 2
 }
 
 
 @article{profmat_regimento,
-address={Rio de Janeiro, RJ},
-author = {SBM},
-title={Regimento do Mestrado Profissional em Matemática em Rede Nacional – Profmat},
-url={https://profmat-sbm.org.br/regimento/},
-urlaccessdate={03 jul. 2024},
-year={2024}
+    address         ={Rio de Janeiro, RJ},
+    author          = {SBM},
+    title           = {Regimento do Mestrado Profissional em Matemática em Rede Nacional – Profmat},
+    url             = {https://profmat-sbm.org.br/regimento/},
+    urlaccessdate   = {03 jul. 2024},
+    year            = {2024}
 }
+
+
+
 
 
 %---------Sites---------%
 @Misc{latex-projeto,
-author = {LaTeX\;Project},
-title = {The LATEX Project},
-year = {2024},
-url = {https://www.latex-project.org/},
-urlaccessdate = {03 jul. 2024}
+    author = {LaTeX\;Project},
+    title = {The LATEX Project},
+    year = {2024},
+    url = {https://www.latex-project.org/},
+    urlaccessdate = {03 jul. 2024}
 }
 
 @Misc{abntex-projeto,
-author = {Projeto\;Abntex},
-title = {AbnTeX},
-subtitle = {Classe LaTeX e estilo bibliográfico compatíveis com as normas da ABNT},
-year = {2025},
-url = {http://www.abntex.net.br/},
-urlaccessdate = {03 jul. 2024}
+    author = {Projeto\;Abntex},
+    title = {AbnTeX},
+    subtitle = {Classe LaTeX e estilo bibliográfico compatíveis com as normas da ABNT},
+    year = {2024},
+    url = {http://www.abntex.net.br/},
+    urlaccessdate = {03 jul. 2024}
 }
 
 
+@misc{heinken2024latex,
+    author          = {W. Heinke},
+    title           = {LaTeX},
+    subtitle        = {Mathematical symbols},
+    url             = {https://www.cmor-faculty.rice.edu/~heinken/latex/symbols.pdf},
+    year            = {2024},
+    urlaccessdate   = {03 jul. 2024},
+}
+
+%---------LIVROS---------%
+@book{marconi2010metodologia,
+  title={Metodologia Científica},
+  author={Marconi, Marina de Andrade and Lakatos, Eva Maria},
+  year={2010},
+  publisher={Atlas}
+}
+
+@book{gil2008metodos,
+  title={Métodos e Técnicas de Pesquisa Social},
+  author={Gil, Antonio Carlos},
+  year={2008},
+  publisher={Atlas}
+}
+
+@book{minayo2010pesquisa,
+  title={Pesquisa Social: Teoria, Método e Criatividade},
+  author={Minayo, Maria Cecília de Souza},
+  year={2010},
+  publisher={Vozes}
+}
+
+@book{goldenberg1999arte,
+  title={A Arte de Pesquisar: Como Fazer Pesquisa Qualitativa em Ciências Sociais},
+  author={Goldenberg, Miriam},
+  year={1999},
+  publisher={Record}
+}
+
+@book{sbm2011pitagoras,
+  title={A Matemática do Ensino Médio: Geometria - Teorema de Pitágoras},
+  author={Sociedade Brasileira de Matemática},
+  year={2011},
+  publisher={SBM}
+}
+
+@book{sbm2011tales,
+  title={A Matemática do Ensino Médio: Geometria - Teorema de Tales},
+  author={Sociedade Brasileira de Matemática},
+  year={2011},
+  publisher={SBM}
+}
+
+@book{sbm2011primos,
+  title={A Matemática do Ensino Médio: Aritmética - Números Primos},
+  author={Sociedade Brasileira de Matemática},
+  year={2011},
+  publisher={SBM}
+}
 
 
 
