--- a/capitulos/cap_03.tex
+++ b/capitulos/cap_03.tex
@@ -5,3 +5,27 @@
 Neste capítulo, o autor descreve de maneira detalhada os métodos e procedimentos empregados na condução da pesquisa. Em Matemática, isso pode envolver a escolha de métodos analíticos, algébricos ou computacionais, conforme apropriado para resolver os problemas propostos. Deve-se especificar claramente o tipo de pesquisa realizada (teórica, aplicada, ou mista), bem como os procedimentos utilizados para a formulação de conjecturas, desenvolvimento de provas e verificação dos resultados.
 
 A descrição metodológica deve incluir também a justificativa para a escolha dos métodos, destacando suas vantagens e limitações. No contexto matemático, é fundamental apresentar de maneira rigorosa e transparente os passos seguidos na derivação de resultados, de modo que outros pesquisadores possam replicar ou validar os achados. Além disso, quando aplicável, deve-se detalhar o uso de software matemático ou outras ferramentas computacionais que auxiliem na obtenção de resultados, ressaltando a importância dessas ferramentas no processo investigativo.
+
+\section{Classificação das Pesquisas Acadêmicas}
+A pesquisa acadêmica é fundamental para o avanço do conhecimento e pode ser classificada de várias maneiras, dependendo do objetivo, abordagem e natureza dos dados. Nesta seção, discutiremos as principais categorias de pesquisa acadêmica.
+
+\subsection{Quanto à Natureza}
+\begin{itemize}
+    \item \textbf{Pesquisa Básica}: Também conhecida como pesquisa pura, tem como objetivo principal o avanço do conhecimento teórico sem uma aplicação prática imediata \cite{marconi2010metodologia}.
+    \item \textbf{Pesquisa Aplicada}: Focada em resolver problemas práticos específicos e aplicar o conhecimento teórico a situações do mundo real \cite{gil2008metodos}.
+\end{itemize}
+
+\subsection{Quanto à Abordagem}
+\begin{itemize}
+    \item \textbf{Pesquisa Qualitativa}: Envolve a coleta e análise de dados não numéricos (como textos e entrevistas) para entender conceitos, opiniões ou experiências \cite{minayo2010pesquisa}.
+    \item \textbf{Pesquisa Quantitativa}: Envolve a coleta e análise de dados numéricos para identificar padrões e testar hipóteses \cite{goldenberg1999arte}.
+\end{itemize}
+
+\subsection{Quanto aos Objetivos}
+\begin{itemize}
+    \item \textbf{Exploratória}: Tem como objetivo explorar um problema ou situação para fornecer uma melhor compreensão e gerar hipóteses \cite{gil2008metodos}.
+    \item \textbf{Descritiva}: Descreve características de uma população ou fenômeno sem estabelecer relações de causa e efeito \cite{marconi2010metodologia}.
+    \item \textbf{Explicativa}: Busca esclarecer as causas e consequências dos fenômenos estudados \cite{gil2008metodos}.
+\end{itemize}
+
+A classificação das pesquisas acadêmicas é uma ferramenta essencial para guiar os pesquisadores na escolha do método mais adequado para seus estudos. Cada tipo de pesquisa tem suas próprias vantagens e limitações, e a escolha depende do objetivo do estudo e da natureza do problema a ser investigado.
