--- a/customizacoes.tex
+++ b/customizacoes.tex
@@ -154,6 +154,11 @@
 \definecolor{blue}{RGB}{41,5,195}
 % ---
 
+\newtheorem{definition}{Definição}[chapter]
+\newtheorem{theorem}{Teorema}[chapter]
+\newtheorem{corollary}{Corolário}[theorem]
+\newtheorem{lemma}[theorem]{Lema}
+
 % informações do PDF
 \makeatletter
 \hypersetup{
