--- a/dissertacao_UFT.tex
+++ b/dissertacao_UFT.tex
@@ -1,5 +1,5 @@
 %---------------------------------------------------------------%
-%-------------------MODELO DE DISSERTAÇÃO UFT-------------------%
+%-------------- MODELO DE DISSERTAÇÃO PROFMAT/UFT --------------%
 %---------------------------------------------------------------%
 
 \documentclass[
