--- a/pretextual.tex
+++ b/pretextual.tex
@@ -18,7 +18,7 @@
 % Substitua o arquivo temporário de mesmo nome presente neste modelo.
 
 \begin{fichacatalografica}
-    \includepdf{ficha_catalografica.pdf}
+    \includepdf{pdfs/ficha_catalografica.pdf}
 \end{fichacatalografica}
 
 
@@ -28,7 +28,7 @@
 % Salve-a em formato PDF com o nome: folha_aprovacao.pdf
 % Substitua o arquivo temporário de mesmo nome presente neste modelo.
 
-\includepdf{folha_aprovacao.pdf}
+\includepdf{pdfs/folha_aprovacao.pdf}
 
 
 %----------------------Dedicatória----------------------%
@@ -74,12 +74,12 @@ Aos familiares e amigos ...
 \begin{resumo}
 \SingleSpacing
 
-    \noindent Espaço reservado para a escrita do resumo da dissertação. As principais regras para a escrita do resumo encontram-se na norma ABNT 6026 de 2003. De acordo com essa norma, o resumo deve apresentar os pontos maios relevantes da pesquisa: objetivos, os métodos, os resultados, bem como as conclusões. Deve-se evitar o uso de equações, fórmulas, figuras.
+    \noindent Espaço reservado para a escrita do resumo da dissertação. As principais regras para a escrita do resumo encontram-se na norma ABNT 6026. De acordo com essa norma, o resumo deve apresentar os pontos maios relevantes da pesquisa: objetivos, os métodos, os resultados, bem como as conclusões. Deve-se evitar o uso de equações, fórmulas, figuras.
     
     \vspace{\onelineskip}
     
     \noindent
-    \textbf{Palavras-chave}: palavra-chave1; palavra-chave2; palavra-chave3.
+    Palavras-chave: palavra-chave1; palavra-chave2; palavra-chave3.
     
 \end{resumo}
 
@@ -88,15 +88,19 @@ Aos familiares e amigos ...
 \SingleSpacing
     \begin{otherlanguage*}{english}
     
-        \noindent This is the abstract. This space is reserved for dissertation abstract writing. The main rules for writing are found in ABNT 6026 of 2003. According to this standard, the abstract should be presented and the important points of the research: objectives, methods, results, as well as conclusions. One should avoid using equations, formulas, figures.
+        \noindent This is the abstract. This space is reserved for dissertation abstract writing. The main rules for writing are found in ABNT 6026. According to this standard, the abstract should be presented and the important points of the research: objectives, methods, results, as well as conclusions. One should avoid using equations, formulas, figures.
         
         \vspace{\onelineskip}
         
         \noindent 
-        \textbf{Keywords}: keyword1; keyword2; keyword3.
+        Keywords: keyword1; keyword2; keyword3.
         
     \end{otherlanguage*}
 \end{resumo}
+
+
+
+
 
 
 %----------------Lista de Ilustrações----------------%
@@ -131,10 +135,8 @@ Aos familiares e amigos ...
 %----------------Lista de Símbolos----------------%
 \begin{simbolos}
   \item[$ \mathbb{R} $] Conjunto dos números reais
-  \item[$ A^{-1} $] Inversa da matriz quadrada $A$
   \item[$ \sum $] Somatório
   \item[$ \dfrac{df}{dx} $] Derivada da função de uma variável $f(x)$ com reação à variável $x$
-  \item[$ \dfrac{\partial F}{\partial x_i} $] Derivada parcial da função de várias variáveis $F (x_1, x_2, \ldots)$ com relação à i-ésima variável $x_i$.
   \item[$ \overrightarrow{v} $] Vetor
 \end{simbolos}
 
